--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,13 +4,30 @@ on:
   push:
     branches:
       - main
+    paths:
+      - '**.rb'
   pull_request:
+    paths:
+      - '**.rb'
+
+env:
+  HOMEBREW_DEVELOPER: 1
+  HOMEBREW_NO_ANALYTICS: 1
+
+defaults:
+  run:
+    shell: bash -xeuo pipefail {0}
+
+concurrency:
+  group: cache-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
 
 jobs:
   test-bot:
     strategy:
       matrix:
-        os: [ ubuntu-22.04, macos-15-intel, macos-26 ]
+        os: [ ubuntu-latest, macos-26, macos-15, macos-15-intel, macos-14 ]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     permissions:
       actions: read
@@ -25,22 +42,47 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Get cache key
+        id: cache-key
+        run: |
+          cache_key_prefix="${RUNNER_OS}"
+          if [ "${RUNNER_OS}" = macOS ]
+          then
+            macos_version="$(sw_vers -productVersion)"
+            cache_key_prefix="macos${macos_version%%.*}-$(uname -m)"
+          elif [ "${RUNNER_OS}" = Linux ]
+          then
+            cache_key_prefix="linux-$(uname -m)"
+          fi
+          echo "prefix=${cache_key_prefix}" >> "${GITHUB_OUTPUT}"
+
       - name: Cache Homebrew Bundler RubyGems
+        id: cache
         uses: actions/cache@v4
         with:
           path: ${{ steps.set-up-homebrew.outputs.gems-path }}
-          key: ${{ matrix.os }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
-          restore-keys: ${{ matrix.os }}-rubygems-
+          key: ${{ steps.cache-key.outputs.prefix }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
+          restore-keys: ${{ steps.cache-key.outputs.prefix }}-rubygems-
 
-      - run: brew test-bot --only-cleanup-before
+      - name: Install Homebrew Bundler RubyGems
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: brew install-bundler-gems
 
-      - run: brew test-bot --only-setup
+      - name: Cleanup runner
+        run: brew test-bot --only-cleanup-before        
+
+      - name: Setup Homebrew test environment
+        run: brew test-bot --only-setup
+
+      - name: Formulae detect
+        id: formulae-detect
+        run: brew test-bot --only-formulae-detect
 
       - name: Install FUSE-T
-        if: matrix.os == 'macos-26' || matrix.os == 'macos-15-intel'
+        if: matrix.os != 'ubuntu-latest'
         run: |
           brew install --cask fuse-t
-          /bin/bash -c "$(curl -fsSL https://www.surge.box.ca/files/fuse-t-links.sh)"
+          /bin/bash -c /Users/runner/work/homebrew-knickknacks/homebrew-knickknacks/cmd/fuse-t-links-add > /dev/null
 
       - run: brew test-bot --only-tap-syntax
       - name: Base64-encode GITHUB_TOKEN for HOMEBREW_DOCKER_REGISTRY_TOKEN
@@ -53,13 +95,29 @@ jobs:
           echo "::add-mask::${base64_token}"
           echo "token=${base64_token}" >> "${GITHUB_OUTPUT}"
       - run: brew test-bot --only-formulae --root-url=https://ghcr.io/v2/slickag/knickknacks
-        if: github.event_name == 'pull_request'
+        name: Build bottle
+        if: github.event_name == 'pull_request' && matrix.os != 'macos-15-intel'
         env:
           HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
+      # - run: brew test-bot --only-formulae --only-json-tab --skip-online-checks --skip-recursive-dependents --build-dependents-from-source --root-url=https://ghcr.io/v2/slickag/knickknacks
+      - run: |
+          if [[ -z "$TESTING_FORMULAE" ]]
+          then
+            exit 0
+          fi
+          
+          brew install --formula --build-bottle "${TESTING_FORMULAE}"
+          brew bottle --verbose --json --root-url=https://ghcr.io/v2/slickag/knickknacks --only-json-tab "${TESTING_FORMULAE}"
+        if: github.event_name == 'pull_request' && matrix.os == 'macos-15-intel'
+        name: Build bottle (Intel)
+        id: build-bottle-intel
+        env:
+          HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
+          TESTING_FORMULAE: ${{ steps.formulae-detect.outputs.testing_formulae }}
 
       - name: Upload bottles as artifact
         if: always() && github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
-          name: bottles_${{ matrix.os }}
+          name: bottles_${{ steps.cache-key.outputs.prefix }}
           path: '*.bottle.*'
