--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
         if: matrix.os == 'macos-26' || matrix.os == 'macos-15-intel'
         run: |
           brew install --cask fuse-t
-          /bin/bash -c "$(curl -fsSL https://www.surge.box.ca/files/fuse-t-links.sh)" > /dev/null
+          brew fuse-t-links-add
 
       - run: brew test-bot --only-tap-syntax
       - name: Base64-encode GITHUB_TOKEN for HOMEBREW_DOCKER_REGISTRY_TOKEN
