--- a/.github/workflows/autobump.yml
+++ b/.github/workflows/autobump.yml
@@ -16,6 +16,8 @@ jobs:
 
     - name: Set up git
       uses: Homebrew/actions/git-user-config@main
+      with:
+        username: slickag
 
     - name: Bump packages
       id: autobump
