--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,11 +6,16 @@ on:
       - main
   pull_request:
 
+concurrency:
+  group: cache-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
+
 jobs:
   test-bot:
     strategy:
       matrix:
-        os: [ ubuntu-22.04, macos-15-intel, macos-26 ]
+        os: [ ubuntu-latest, macos-26, macos-15, macos-15-intel, macos-14, macos14-large ]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     permissions:
       actions: read
@@ -25,19 +30,32 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Get cache key
+        id: cache-key
+        run: |
+          cache_key_prefix="${RUNNER_OS}"
+          if [ "${RUNNER_OS}" = macOS ]
+          then
+            macos_version="$(sw_vers -productVersion)"
+            cache_key_prefix="${macos_version%%.*}-$(uname -m)"
+          fi
+          echo "prefix=${cache_key_prefix}" >> "${GITHUB_OUTPUT}"
+
       - name: Cache Homebrew Bundler RubyGems
         uses: actions/cache@v4
         with:
           path: ${{ steps.set-up-homebrew.outputs.gems-path }}
-          key: ${{ matrix.os }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
-          restore-keys: ${{ matrix.os }}-rubygems-
+          key: ${{ steps.cache-key.outputs.prefix }}-rubygems-${{ steps.set-up-homebrew.outputs.gems-hash }}
+          restore-keys: ${{ steps.cache-key.outputs.prefix }}-rubygems-
 
-      - run: brew test-bot --only-cleanup-before
+      - name: Cleanup runner
+        run: brew test-bot --only-cleanup-before
 
-      - run: brew test-bot --only-setup
+      - name: Setup Homebrew test environment
+        run: brew test-bot --only-setup
 
       - name: Install FUSE-T
-        if: matrix.os == 'macos-26' || matrix.os == 'macos-15-intel'
+        if: matrix.os != 'ubuntu-latest'
         run: |
           brew install --cask fuse-t
           /bin/bash -c /Users/runner/work/homebrew-knickknacks/homebrew-knickknacks/cmd/fuse-t-links-add > /dev/null
