Enhance CI workflow with concurrency and caching
Added concurrency settings and updated cache key logic for Homebrew Bundler RubyGems.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,9 +37,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Cleanup runner
-        run: brew test-bot --only-cleanup-before
-
       - name: Get cache key
         id: cache-key
         run: |
@@ -66,8 +63,15 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: brew install-bundler-gems
 
+      - name: Cleanup runner
+        run: brew test-bot --only-cleanup-before        
+
       - name: Setup Homebrew test environment
         run: brew test-bot --only-setup
+
+      - name: Formulae detect
+        id: formulae-detect
+        run: brew test-bot --only-formulae-detect
 
       - name: Install FUSE-T
         if: matrix.os != 'ubuntu-latest'
@@ -86,13 +90,25 @@ jobs:
           echo "::add-mask::${base64_token}"
           echo "token=${base64_token}" >> "${GITHUB_OUTPUT}"
       - run: brew test-bot --only-formulae --root-url=https://ghcr.io/v2/slickag/knickknacks
+        name: Build bottle
         if: github.event_name == 'pull_request' && matrix.os != 'macos-15-intel'
         env:
           HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
-      - run: brew test-bot --only-formulae --build-dependents-from-source --root-url=https://ghcr.io/v2/slickag/knickknacks
+      # - run: brew test-bot --only-formulae --only-json-tab --skip-online-checks --skip-recursive-dependents --build-dependents-from-source --root-url=https://ghcr.io/v2/slickag/knickknacks
+      - run: |
+          if [[ -z "$TESTING_FORMULAE" ]]
+          then
+            exit 0
+          fi
+          
+          brew install --formula --build-bottle "${TESTING_FORMULAE}"
+          brew bottle --verbose --json --root-url=https://ghcr.io/v2/slickag/knickknacks --only-json-tab "${TESTING_FORMULAE}"
         if: github.event_name == 'pull_request' && matrix.os == 'macos-15-intel'
+        name: Build bottle (Intel)
+        id: build-bottle-intel
         env:
           HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
+          TESTING_FORMULAE: ${{ steps.formulae-detect.outputs.testing_formulae }}
 
       - name: Upload bottles as artifact
         if: always() && github.event_name == 'pull_request'
