--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,10 @@ on:
       - main
   pull_request:
 
+defaults:
+  run:
+    shell: bash -xeuo pipefail {0}
+
 concurrency:
   group: cache-${{ github.event.pull_request.number }}
   cancel-in-progress: true
@@ -14,7 +18,7 @@ jobs:
   test-bot:
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-26, macos-15, macos-15-intel, macos-14, macos14-large ]
+        os: [ ubuntu-latest, macos-26, macos-15, macos-15-intel, macos-14 ]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     permissions:
