--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -94,5 +94,5 @@ jobs:
         if: always() && github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
-          name: bottles_${{ matrix.os }}
+          name: bottles_${{ steps.cache-key.outputs.prefix }}
           path: '*.bottle.*'
