--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -69,6 +69,10 @@ jobs:
       - name: Setup Homebrew test environment
         run: brew test-bot --only-setup
 
+      - name: Formulae detect
+        id: formulae-detect
+        run: brew test-bot --only-formulae-detect
+
       - name: Install FUSE-T
         if: matrix.os != 'ubuntu-latest'
         run: |
@@ -86,12 +90,15 @@ jobs:
           echo "::add-mask::${base64_token}"
           echo "token=${base64_token}" >> "${GITHUB_OUTPUT}"
       - run: brew test-bot --only-formulae --root-url=https://ghcr.io/v2/slickag/knickknacks
+        name: Build bottle
         if: github.event_name == 'pull_request' && matrix.os != 'macos-15-intel'
         env:
           HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
           HOMEBREW_NO_INSTALL_FROM_API: 1
       - run: brew test-bot --only-formulae --only-json-tab --skip-online-checks --skip-recursive-dependents --build-dependents-from-source --root-url=https://ghcr.io/v2/slickag/knickknacks
         if: github.event_name == 'pull_request' && matrix.os == 'macos-15-intel'
+        name: Build bottle (Intel)
+        id: build-bottle-intel
         env:
           HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
           HOMEBREW_NO_INSTALL_FROM_API: 1
