--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,9 +14,9 @@ env:
   HOMEBREW_DEVELOPER: 1
   HOMEBREW_NO_ANALYTICS: 1
 
-defaults:
-  run:
-    shell: bash -xeuo pipefail {0}
+# defaults:
+#   run:
+#     shell: bash -xeuo pipefail {0}
 
 concurrency:
   group: cache-${{ github.event.pull_request.number }}
@@ -27,7 +27,6 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-26, macos-15, macos-15-intel, macos-14 ]
-      fail-fast: false
     runs-on: ${{ matrix.os }}
     permissions:
       actions: read
@@ -105,9 +104,11 @@ jobs:
           then
             exit 0
           fi
-          
-          brew install --formula --build-bottle "${TESTING_FORMULAE}"
-          brew bottle --verbose --json --root-url=https://ghcr.io/v2/slickag/knickknacks --only-json-tab "${TESTING_FORMULAE}"
+
+          for formula in ${TESTING_FORMULAE//,/ }
+          do
+            brew install --formula --build-bottle "$formula" && brew bottle --verbose --json --root-url=https://ghcr.io/v2/slickag/knickknacks --only-json-tab "$formula"
+          done
         if: github.event_name == 'pull_request' && matrix.os == 'macos-15-intel'
         name: Build bottle (Intel)
         id: build-bottle-intel
