--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,9 +14,9 @@ env:
   HOMEBREW_DEVELOPER: 1
   HOMEBREW_NO_ANALYTICS: 1
 
-# defaults:
-#   run:
-#     shell: bash -xeuo pipefail {0}
+defaults:
+  run:
+    shell: bash -xeuo pipefail {0}
 
 concurrency:
   group: cache-${{ github.event.pull_request.number }}
@@ -100,20 +100,14 @@ jobs:
           HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
       # - run: brew test-bot --only-formulae --only-json-tab --skip-online-checks --skip-recursive-dependents --build-dependents-from-source --root-url=https://ghcr.io/v2/slickag/knickknacks
       - run: |
-          if [[ -z "$TESTING_FORMULAE" ]]
-          then
-            exit 0
-          fi
-
-          for formula in ${TESTING_FORMULAE//,/ }
-          do
-            brew install --formula --build-bottle "$formula" && brew bottle --verbose --json --root-url=https://ghcr.io/v2/slickag/knickknacks --only-json-tab "$formula"
-          done
+          cp /Users/runner/work/homebrew-knickknacks/homebrew-knickknacks/cmd/tb_formulae.rb "$(brew --prefix)/Library/Homebrew/test_bot/formulae.rb"
+          brew test-bot --only-formulae --root-url=https://ghcr.io/v2/slickag/knickknacks
         if: github.event_name == 'pull_request' && matrix.os == 'macos-15-intel'
         name: Build bottle (Intel)
         id: build-bottle-intel
         env:
           HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
+          HOMEBREW_NO_INSTALL_FROM_API: 1
           TESTING_FORMULAE: ${{ steps.formulae-detect.outputs.testing_formulae }}
 
       - name: Upload bottles as artifact
