--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,14 +19,21 @@ defaults:
     shell: bash -xeuo pipefail {0}
 
 concurrency:
-  group: cache-${{ github.event.pull_request.number }}
+  group: tests-${{ github.event.pull_request.number }}
   cancel-in-progress: true
 
 jobs:
   test-bot:
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-26, macos-15, macos-15-intel, macos-14 ]
+        os:
+          - ubuntu-latest
+          - ubuntu-24.04-arm
+          - macos-26
+          - macos-15
+          - macos-15-intel
+          - macos-14
+      # fail-fast: false
     runs-on: ${{ matrix.os }}
     permissions:
       actions: read
@@ -35,21 +42,30 @@ jobs:
       packages: read
       pull-requests: read
     steps:
+      - name: Preinstall homebrew
+        if: matrix.os == 'ubuntu-24.04-arm'
+        run: |
+          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+
       - name: Set up Homebrew
         id: set-up-homebrew
         uses: Homebrew/actions/setup-homebrew@main
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Cleanup runner
+        run: brew test-bot --only-cleanup-before
+
       - name: Get cache key
         id: cache-key
         run: |
-          cache_key_prefix="${RUNNER_OS}"
-          if [ "${RUNNER_OS}" = macOS ]
+          cache_key_prefix="${{ runner.os }}"
+          if [ "${{ runner.os }}" == "macOS" ]
           then
             macos_version="$(sw_vers -productVersion)"
             cache_key_prefix="macos${macos_version%%.*}-$(uname -m)"
-          elif [ "${RUNNER_OS}" = Linux ]
+          elif [ "${{ runner.os }}" == "Linux" ]
           then
             cache_key_prefix="linux-$(uname -m)"
           fi
@@ -67,23 +83,17 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: brew install-bundler-gems
 
-      - name: Cleanup runner
-        run: brew test-bot --only-cleanup-before        
-
       - name: Setup Homebrew test environment
+        if: matrix.os != 'ubuntu-24.04-arm'
         run: brew test-bot --only-setup
 
-      - name: Formulae detect
-        id: formulae-detect
-        run: brew test-bot --only-formulae-detect
-
       - name: Install FUSE-T
-        if: matrix.os != 'ubuntu-latest'
+        if: ${{ runner.os == 'macOS' }}
         run: |
           brew install --cask fuse-t
           /bin/bash -c /Users/runner/work/homebrew-knickknacks/homebrew-knickknacks/cmd/fuse-t-links-add > /dev/null
 
-      - run: brew test-bot --only-tap-syntax
+      - run: brew test-bot --only-tap-syntax          
       - name: Base64-encode GITHUB_TOKEN for HOMEBREW_DOCKER_REGISTRY_TOKEN
         id: base64-encode
         if: github.event_name == 'pull_request'
@@ -93,22 +103,22 @@ jobs:
           base64_token=$(echo -n "${TOKEN}" | base64 | tr -d "\n")
           echo "::add-mask::${base64_token}"
           echo "token=${base64_token}" >> "${GITHUB_OUTPUT}"
-      - run: brew test-bot --only-formulae --root-url=https://ghcr.io/v2/slickag/knickknacks
-        name: Build bottle
-        if: github.event_name == 'pull_request' && matrix.os != 'macos-15-intel'
-        env:
-          HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
-      # - run: brew test-bot --only-formulae --only-json-tab --skip-online-checks --skip-recursive-dependents --build-dependents-from-source --root-url=https://ghcr.io/v2/slickag/knickknacks
       - run: |
-          cp /Users/runner/work/homebrew-knickknacks/homebrew-knickknacks/cmd/tb_formulae "$(brew --prefix)/Homebrew/Library/Homebrew/test_bot/formulae.rb"
-          brew test-bot --only-formulae --root-url=https://ghcr.io/v2/slickag/knickknacks
-        if: github.event_name == 'pull_request' && matrix.os == 'macos-15-intel'
-        name: Build bottle (Intel)
-        id: build-bottle-intel
+          if [[ "${{ runner.arch }}" == "ARM64" ]]; then
+            export HOMEBREW_ARM64_TESTING=1
+          fi
+          if [[ "${{ runner.os }}" == "macOS" && "${{ runner.arch }}" == "X64" ]]
+          then
+            export HOMEBREW_NO_INSTALL_FROM_API=1
+            cp /Users/runner/work/homebrew-knickknacks/homebrew-knickknacks/.github/workflows/files/tb_formulae "$(brew --prefix)/Homebrew/Library/Homebrew/test_bot/formulae.rb"
+            brew test-bot --verbose --only-formulae --root-url=https://ghcr.io/v2/slickag/knickknacks
+          else
+            brew test-bot --only-formulae --root-url=https://ghcr.io/v2/slickag/knickknacks
+          fi
+        name: Build bottle
+        id: build-bottle
         env:
           HOMEBREW_DOCKER_REGISTRY_TOKEN: ${{ steps.base64-encode.outputs.token }}
-          HOMEBREW_NO_INSTALL_FROM_API: 1
-          TESTING_FORMULAE: ${{ steps.formulae-detect.outputs.testing_formulae }}
 
       - name: Upload bottles as artifact
         if: always() && github.event_name == 'pull_request'
