--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -135,18 +135,14 @@ jobs:
         with:
           name: bottles_${{ steps.cache-key.outputs.prefix }}
           path: '*.bottle.*'
-  labeler:
+  label_pr:
     needs: test-bot
     if: ${{ startsWith(github.head_ref, 'bump') && github.event_name == 'pull_request' }}
-    permissions:
-      contents: read
-      pull-requests: write
-      issues: write
     runs-on: ubuntu-latest
     steps:
     - id: label-the-PR
-      uses: actions/labeler@v6
       env:
-        HOMEBREW_GITHUB_API_TOKEN: ${{secrets.AUTOBUMP_TOKEN}}
-      with:
-        dot: false
+        GH_TOKEN: ${{secrets.AUTOBUMP_TOKEN}}
+        PR_NUMBER: ${{ github.event.pull_request.number }}
+      run: |
+        gh pr edit "${PR_NUMBER}" --add-label "pr-pull"
