--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -145,4 +145,4 @@ jobs:
         GH_TOKEN: ${{secrets.AUTOBUMP_TOKEN}}
         PR_NUMBER: ${{ github.event.pull_request.number }}
       run: |
-        gh pr edit "${PR_NUMBER}" --add-label "pr-pull"
+        gh pr edit "${PR_NUMBER}" --add-label "pr-pull" --repo "slickag/homebrew-knickknacks"
